# gitit-birdtrack-shift

./: README.markdown  gitit-birdtrack-shift.cabal
src/Network/Gitit/Plugin/: BirdtrackShift.hs
